10/1/10 make physical parts of the capacitor transparent when E-field, Voltmeter or Field Detector is selected
10/1/10 add placeholder node for E-Field Detector, wire up visibility to control panel
10/1/10 check in field detector probe image created by Noah P
10/1/10 change "Field Detector" to "Electric Field Detector"
# 0.00.19 (44601) Oct 1, 2010
10/1/10 demonstrate E-field lines
10/1/10 make capacitor plates and dielectric transparent when E-field is selected
10/1/10 add E-field view
10/1/10 move responsibility for dielectric color into DielectricNode
# 0.00.18 (44586) Sep 30, 2010
9/30/10 demo fix to current indicator, and improved plate charge layout
9/30/10 add margin along z axis for plate charges, hack to keep them on the plate with 3D perspective
9/30/10 keep plate charges from falling off the edges of the plate
9/30/10 ensure that at least one charge is shown if number of plate charges is non-zero
9/30/10 TestPlateChargeLayout, test harness for plate charge layout
9/30/10 fix: current indicator should point counterclockwise for +dV, clockwise for -dV
9/30/10 tweak tick marks on Plate Charge slider, make thumb line up precisely with zero
9/29/10 remove debug value node from PlateChargeControlNode, this info is shown in ModelValuesPanel
9/29/10 when "Remove Wires" is pressed, set Plate Charge control to the plate charge with the battery connected
9/29/10 change range of Plate Charge slider to go from "lots (+)" to "lots (-)"
# 0.00.17 (44526) Sep 29, 2010
9/29/10 demo first pass at grid layout for plate charges
9/29/10 layout charges in a grid using algorithm from CCK's CapacitorNode (lines 270-230)
9/29/10 handle partially-inserted dielectric for Plate Charges view
9/29/10 make battery have no affect when disconnected
9/29/10 fixed another plate charge polarity issue
# 0.00.16 (44502) Sep 29, 2010
9/29/10 another dev version to demo plate charge, fixed polarity issues
9/28/10 create infrastructure for dielectric charge views, wire up to control panel